# Testingine

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  DebugViews.natvis  README.md  cmake-variants.yaml  vcpkg.json
src/: CMakeLists.txt
src/executables/: CMakeLists.txt
src/executables/Editor/: CMakeLists.txt  Editor.cpp  Editor.hpp  EditorInputCallbacks.cpp  Engine.cpp  Engine.hpp  main.cpp
src/executables/Editor/BatchManager/: BatchManager.cpp  BatchManager.hpp
src/executables/Editor/Scene/: DefaultComponents.cpp  DefaultComponents.hpp  Scene.cpp  Scene.hpp  SceneLoadglTF.cpp
src/executables/Editor/Scene/glTF/: glTF.cpp  glTF.hpp  glTFJSON.hpp
src/executables/HelloTriangleApplication/: main.cpp
src/executables/Refactored/: CMakeLists.txt  main.cpp
src/libraries/: CMakeLists.txt
src/libraries/intern/: CMakeLists.txt
src/libraries/intern/Camera/: Camera.cpp  Camera_MatrixAccess.cpp
src/libraries/intern/Datastructures/: ArrayHelpers.hpp  ArraySize.hpp  CMakeLists.txt  Concepts.hpp  DynamicBitset.cpp  DynamicBitset.hpp  FunctionQueue.hpp  Pool.hpp  Span.hpp  StringHash.hpp  StringMap.hpp  ThreadPool.cpp  ThreadPool.hpp
src/libraries/intern/Datastructures/Pool/: Handle.hpp  Pool.hpp  PoolHelpers.hpp  PoolMulti.hpp
src/libraries/intern/Datastructures/Tests/: Bitset.cpp  Concepts.cpp  Pool.cpp  PoolMulti.cpp  ThreadPool.cpp
src/libraries/intern/ECS/: CMakeLists.txt  ECS.cpp  ECS.hpp  ECS.tpp  Entity.tpp  Helpers.hpp  SharedTypes.hpp
src/libraries/intern/ECS/Tests/: System.cpp  Tests.cpp
src/libraries/intern/Engine/: CMakeLists.txt  Engine.cpp  Engine.hpp
src/libraries/intern/Engine/Application/: Application.cpp  Application.hpp
src/libraries/intern/Engine/Camera/: Camera.cpp  Camera.hpp
src/libraries/intern/Engine/Graphics/: GPUAllocation.hpp  Graphics.cpp  Graphics.hpp  RenderTargets.hpp  VulkanTypes.hpp
src/libraries/intern/Engine/Graphics/Barrier/: Barrier.hpp
src/libraries/intern/Engine/Graphics/Barriers/: Barrier.cpp  Barrier.hpp
src/libraries/intern/Engine/Graphics/Buffer/: Buffer.cpp  Buffer.hpp
src/libraries/intern/Engine/Graphics/Compute/: ComputeShader.cpp  ComputeShader.hpp
src/libraries/intern/Engine/Graphics/Device/: BindlessManager.cpp  BindlessManager.hpp  HelperTypes.hpp  VulkanConversions.cpp  VulkanConversions.hpp  VulkanDebug.cpp  VulkanDebug.hpp  VulkanDevice.cpp  VulkanDevice.hpp
src/libraries/intern/Engine/InputManager/: InputManager.cpp  InputManager.hpp
src/libraries/intern/Engine/Misc/: EnumHelpers.hpp  Macros.hpp  Math.hpp  PathHelpers.cpp  PathHelpers.hpp  Printing.cpp  Printing.hpp  StringHash.hpp
src/libraries/intern/Engine/ResourceManager/: ResourceManager.cpp  ResourceManager.hpp
src/libraries/intern/Engine/Scene/: DefaultComponents.cpp  DefaultComponents.hpp  Scene.cpp  Scene.hpp  SceneLoad.cpp
src/libraries/intern/Engine/Tests/: vkConversion.cpp
src/libraries/intern/Engine/Window/: Window.cpp  Window.hpp
src/libraries/intern/Graphics/: Material.hpp  Mesh.cpp  Mesh.hpp  RenderObject.hpp  Texture.cpp  Texture.hpp  VulkanDebug.cpp  VulkanDebug.hpp  VulkanDeviceFinder.cpp  VulkanDeviceFinder.hpp  VulkanDeviceFinderInternal.cpp  VulkanInit.cpp  VulkanInit.hpp  VulkanPipeline.cpp  VulkanPipeline.hpp  VulkanRenderer.cpp  VulkanRenderer.hpp  VulkanSwapchainSetup.cpp  VulkanSwapchainSetup.hpp  VulkanSwapchainSetupInternal.cpp  VulkanTypes.hpp
src/libraries/intern/Graphics/Barriers/: Barrier.cpp  Barrier.hpp
src/libraries/intern/Graphics/Buffer/: Buffer.cpp  Buffer.hpp
src/libraries/intern/Graphics/Material/: Material.cpp  Material.hpp  MaterialInstance.cpp  ParameterBuffer.cpp  ParameterBuffer.hpp
src/libraries/intern/Graphics/Mesh/: Mesh.cpp  Mesh.hpp
src/libraries/intern/Graphics/Pipeline/: GraphicsPipeline.cpp  GraphicsPipeline.hpp  Shaders.cpp  Shaders.hpp
src/libraries/intern/Graphics/RenderObject/: RenderObject.hpp
src/libraries/intern/Graphics/Renderer/: BindlessManager.cpp  BindlessManager.hpp  VulkanDebug.cpp  VulkanDebug.hpp  VulkanRenderer.cpp  VulkanRenderer.hpp  VulkanRendererBindless.cpp
src/libraries/intern/Graphics/Shaders/: Shaders.cpp  Shaders.hpp
src/libraries/intern/Graphics/Texture/: Texture.cpp  Texture.hpp  TextureView.hpp
src/libraries/intern/InputManager/: InputManager.cpp
src/libraries/intern/Math/: Math.hpp
src/libraries/intern/Misc/: Concepts.hpp  Macros.hpp
src/libraries/intern/ResourceManager/: ResourceManager.cpp  ResourceManager.hpp
src/libraries/intern/Scene/: Scene.hpp
src/libraries/intern/Testing/: CMakeLists.txt  Check.hpp
src/libraries/intern/Window/: Window.hpp
src/shaders/: Bindless.glsl  CMakeLists.txt  GPUSceneStructs.hlsl  PBR.glsl  PBRBasic.frag  PBRBasic.vert  VertexAttributes.glsl  VertexAttributes.hlsl  default_lit.frag  equiToCube.comp  equiToCube.hlsl  shader.vert  test.glsl  textured_lit.frag  tri_mesh.vert
src/shaders/Bindless/: Buffers.hlsl  Common.hlsl  DefaultSamplers.hlsl  Samplers.hlsl  Setup.hlsl  Textures.hlsl
src/shaders/GPURendering/: CountBatchElements.comp  PrefixSum.comp  SortInstancesIntoBatches.comp
src/shaders/Misc/: FrustumVis.frag  FrustumVis.vert  debugMipFill.comp
src/shaders/PBR/: PBR.hlsl  PBRBasic.frag  PBRBasic.mesh  PBRBasic.task  PBRBasic.vert  PBRBasicFrag.hlsl  PBRBasicVert.hlsl  integrateBRDF.comp
src/shaders/Skybox/: equiToCube.hlsl  generateIrradiance.comp  hdrSky.mesh  hdrSky.vert  hdrSkyCube.frag  hdrSkyEqui.frag  prefilter.comp
src/shaders/Unlit/: TexturedUnlit.frag  TexturedUnlit.mesh  TexturedUnlit.vert
src/shaders/WriteToSwapchain/: WriteToSwapchain.frag  WriteToSwapchain.vert
src/shaders/includes/: CommonTypes.hlsl  Culling.hlsl  MaterialParams.hlsl  MeshShading.hlsl  NormalMapping.hlsl  ToCPP.hpp  VertexAttributes.hlsl
src/shaders/includes/Bindless/: Buffers.hlsl  Common.hlsl  DefaultDeclarations.hlsl  Samplers.hlsl  Setup.hlsl  Textures.hlsl
src/shaders/includes/GPUScene/: Access.hlsl  BindlessDeclarations.hlsl  DefaultPushConstants.hlsl  Setup.hlsl  Structs.hlsl
src/tests/: Bitset.cpp  CMakeLists.txt  Pool.cpp  Span.cpp  TestECS.cpp
(+79 files in other folders)
