file(GLOB ITEMS ${CMAKE_CURRENT_SOURCE_DIR}/*)
FOREACH(item ${ITEMS})
    if(IS_DIRECTORY ${item})
        if(EXISTS "${item}/CMakeLists.txt")
            file(RELATIVE_PATH relpath ${CMAKE_CURRENT_SOURCE_DIR} ${item})
            message("Executable Folder located: " ${relpath})
            add_subdirectory(${relpath})
        ENDIF()
    ENDIF()
ENDFOREACH()
