cmake_minimum_required(VERSION 3.2)
include(DefaultLibrary)
#need to link as public, so tests linking against "intern" also get them
target_link_libraries(intern PUBLIC Vulkan::Vulkan)
target_link_libraries(intern PUBLIC Vulkan::shaderc_combined)
target_link_libraries(intern PUBLIC glfw)
target_link_libraries(intern PUBLIC glm::glm)
target_link_libraries(intern PUBLIC VMA)
target_link_libraries(intern PUBLIC SPIRV-Reflect)
target_link_libraries(intern PRIVATE EASTL)

IF(VULKAN_ENABLE_VALIDATION)
    message(STATUS "Compiling with vulkan validation enabled")
    target_compile_definitions(intern PUBLIC ENABLE_VULKAN_VALIDATION)
ENDIF()